<resources>
    <string name="app_name">에세머앱</string>
    <!-- common -->
    <string name="next">다음</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="complete">완료</string>
    <!-- Sign In -->
    <string name="email">핸드폰번호</string>
    <string name="password">비밀번호</string>
    <string name="signin_email">로그인</string>
    <string name="signin_google">구글로 로그인</string>
    <string name="signin_naver">네이버로 로그인</string>
    <string name="signup_complete">회원 가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요.</string>

    <!-- Bottom Navigation View -->
    <string name="home">소식</string>
    <string name="search">검색</string>
    <string name="gallery">글 작성</string>
    <string name="favorite">채팅</string>
    <string name="account">사용자</string>
    <string name="more">더보기</string>
    <string name="friendsList">친구 목록</string>
    <string name="timelist">타임라인</string>
    <string name="chat">채팅</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">나의 구독</string>
    <string name="follower">내 구독자</string>
    <string name="follow">구독</string>
    <string name="myfollowing">구독</string>
    <string name="myfollower">구독자</string>
    <string name="follow_cancel">구독 취소</string>
    <string name="profile">정보</string>
    <string name="count_0">0</string>

    <!-- User Fragment -->
    <string name="postCount">내 글 갯수</string>


    <!-- Alarm -->
    <string name="alarm">알림</string>
    <string name="alarm_favorite">님이 당신의 글을 좋아합니다.</string>
    <string name="alarm_comment">님이 댓글을 달았습니다.</string>
    <string name="alarm_follow">님이 팔로우 하셨습니다.</string>
    <string name="alarm_chat">님이 메세지를 보내셨습니다.</string>
    <string name="alarm_follower_update">님이 새로운 소식을 올리셨습니다.</string>

    <!-- Notice -->
    <string name="notice_no_friends">어머 친구가 없으시군요? \n
    다음과 같이 진행하여 친구를 추가해보세요 \n
    1. 돋보기를 클릭 \n
    2. 친구를 검색 \n
    3. 해당 친구를 클릭하여 추가 버튼 클릭</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">글 작성</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- welcome -->
    <string name="welcome_message">반갑습니다.\n\nSMSM에 오신걸 환영합니다.\n\n\n좌우로 화면을 이동해보세요.</string>

    <!-- intro -->
    <string name="intro_message">SMSM은 만 19세 이상 (한국나이) 부터 이용 가능한 에세머 전용 SNS 입니다. \n\n\n본인이 만 19세 이상이라면 계속 진행해주세요. \n\n그렇지않으면 종료하시고 앱을 삭제해주세요.</string>
    <string name="adult_check">당신은 만 19세 (한국나이) 이상 이신가요? \n\n\n\n19세 이상이라면 동의를 누르고 시작해주세요. \n\n만약 거짓으로 동의하고 이용하실 경우 계정의 이용이 영구히 정지되며 이용에 불이익을 받을 수 있습니다.</string>

    <!--welcome permission -->
    <string name="plz_permission">다음의 권한들을 승인해 주세요.\n\n승인하지 않으실 경우 앱사용에 제한이 생길 수 있습니다.</string>
    <string name="mic">마이크</string>
    <string name="body_sensor">신체 센서</string>
    <string name="location">위치</string>
    <string name="storage">저장용량</string>
    <string name="call">전화</string>
    <string name="contracts">주소록</string>
    <string name="camera">카메라</string>
    <string name="calendar">캘랜더</string>
    <string name="sms">SMS</string>
    <string name="approve">승인하기</string>
    <string name="favorites">즐겨찾기</string>
    <string name="friends">친구</string>
    <string name="remove">삭제</string>
    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- popup -->
    <string name="popup_profile_option_report">신고</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="image_description_setting_icon">setting-icon</string>
    <string name="activity_setting_preview_item_name">버전정보</string>

    <string name="no_search_list">검색 대상이 존재하지 않습니다.</string>

    <string name="open_gallery">사진첩\n열기</string>
    <string name="take_picture_fail">사진 촬영에 실패하였습니다.</string>
    <string name="load_picture_fail">사진을 가져오는데 실패하였습니다.</string>

    <string name="this_is_a_temporary_profile">임시 프로필 입니다.</string>
    <string name="fail_to_request_favorite_to_friend">즐겨찾기 추가를 실패하였습니다.</string>
    <string name="only_smsmsm_app_scan_plz">오직 에세머 앱으로만 스캔해 주세요.</string>
    <string name="your_id_scan">본인 아이디를 스캔 하셨습니다.</string>
    <string name="already_add_friend">이미 등록된 친구입니다.</string>

    <string name="regist_your_profile_picture">본인의 프로필 사진을 등록해주세요.</string>
    <string name="one_account_per_person_and_phone_auth">1인 1계정 원칙 준수를 위하여 핸드폰 번호 인증을 받고 있습니다.</string>
    <string name="certification_in_progress">인증 진행</string>
    <string name="please_enter_your_mobile_number">핸드폰 번호를 입력해주세요</string>
    <string name="input_except_hyphen">\'-\' 를 제외하고 입력해주세요.</string>
    <string name="input_nick_name">닉네임을 입력해주세요</string>
    <string name="last_step">마지막 차례네요!</string>

    <string name="no_search_friends">검색된 친구가 없습니다.</string>
    <string name="no_search_yourself">본인은 검색 할 수 없습니다.</string>
    <string name="success_add_friend">친구추가 성공</string>

    <string name="more_question_send_mail">궁금증이 해결되지 않으셨다면 메일 주소 "abcd@gmail.com"로 문의사항을 전달해 주세요.</string>
    <string name="propensity_analysis_title">성향분석 서베이</string>
</resources>