<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_friendslist"
        android:icon="@drawable/ic_baseline_groups_24"
        android:enabled="true"
        android:title="@string/friendsList"
        />
    <item
        android:id="@+id/action_timeline"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/timelist"
        />
    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:enabled="true"
        android:title="@string/chat"
        />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:enabled="true"
        android:title="@string/more"
        />
</menu>