<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.login.InputPhoneNumberActivity">
    
    <data>
        <variable
            name="activityinputphonenumber"
            type="com.uos.smsmsm.activity.login.InputPhoneNumberActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_marginTop="24dp"
            android:id="@+id/activity_input_phone_number_textview_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_mobile_number"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/colorBlack"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_input_phone_number_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_input_phone_number_textview_phonenumber"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="12dp"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/colorBlack"
            android:background="@drawable/background_edittext_round_gray_4dp"

            >
            <EditText
                android:id="@+id/activity_input_phone_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:maxLength="11"
                android:inputType="phone"
                android:hint="@string/input_except_hyphen"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/activity_input_phone_number_textview_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="42dp"
            android:text="Step 2/3"
            android:textSize="24dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_input_phone_number_textinputlayout" />

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@+id/activity_input_phone_number_textview_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_account_per_person_and_phone_auth"
            />

        <Button
            android:id="@+id/activity_input_phone_number_button_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certification_in_progress"
            app:layout_constraintRight_toLeftOf="@+id/activity_input_phone_number_button_complete"
            app:layout_constraintTop_toTopOf="@+id/activity_input_phone_number_button_complete"
            app:layout_constraintBottom_toBottomOf="@+id/activity_input_phone_number_button_complete"
            android:layout_marginRight="12dp"
            android:background="@drawable/background_edittext_round_gray_16dp"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/activity_input_phone_number_button_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/background_round_gray"
            android:layout_margin="24dp"
            android:text="@string/next"
            android:textColor="@color/colorBlack"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>