<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.login.InputNickNameActivity">

    <data>
        <variable
            name="activityinputnickname"
            type="com.uos.smsmsm.activity.login.InputNickNameActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_marginTop="24dp"
            android:id="@+id/activity_input_nick_name_textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_nick_name"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/colorBlack"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_input_nick_name_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_input_nick_name_textview_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="12dp"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_edittext_round_gray_4dp"

            >
            <EditText
                android:id="@+id/activity_input_nick_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:maxLength="12"
                android:singleLine="true"
                android:maxLines="1"
                android:lines="1"
                android:hint="@string/input_nick_name"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/activity_input_nick_name_textview_nickname_size"
            app:layout_constraintEnd_toEndOf="@+id/activity_input_nick_name_textinputlayout"
            app:layout_constraintTop_toBottomOf="@+id/activity_input_nick_name_textinputlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/12"
            />

        <TextView
            android:id="@+id/activity_input_nick_name_textview_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="42dp"
            android:text="Step 3/3"
            android:textSize="24dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_input_nick_name_textinputlayout" />

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@+id/activity_input_nick_name_textview_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_step"
            />

        <Button
            android:id="@+id/activity_input_nick_name_button_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/background_round_gray"
            android:text="@string/complete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>